# ml_nn_sets

./: .gitignore  README.md  colab_tutorial.ipynb  index.html
cpp/01_regression/: Makefile  main.cpp
cpp/02_mnist/: Makefile  data_loader.hpp  download_mnist.sh  main.cpp
cpp/03_custom/: Makefile  main.cpp
cpp/common/: activations.hpp  losses.hpp  matrix.hpp  network.hpp
docs/: index.html  style.css
python/: 01_regression.py  02_mnist.py  03_custom.py  pyproject.toml  save_weights.py
theory/: MATH.md
weights/: mnist_pt.pth  moons_pt.pth  moons_scaler_mean.npy  moons_scaler_std.npy  regression_pt.pth
