[project]
name = "nn-tutorial"
version = "0.1.0"
description = "Neural network tutorial — Python ekvivalenty"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
]

# Žádný build systém — toto je skriptový tutoriál, ne package
